--- a/Practice01_0106.ipynb
+++ b/Practice01_0106.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObgPcbT8nn8tA6tdSV03dj",
+      "authorship_tag": "ABX9TyOZUXabShC47ZMPo91CF4QO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2211,7 +2211,7 @@
         "# print(type(content))\n",
         "\n",
         "# 準備儲存的檔案\n",
-        "f = open(\"cosmed.csv\", \"w\", encoding=\"utf-8\")\n",
+        "f = open(\"cosmed01.csv\", \"w\", encoding=\"utf-8\")\n",
         "f.write(\"名稱，電話\\n\")\n",
         "# 型態轉換: str -> dict/list\n",
         "content = json.loads(content)\n",
@@ -2236,21 +2236,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "gDEZ3P8Xa3nM",
-        "outputId": "9fd02ec1-76bf-42d9-a3c4-950b6675bc18"
+        "outputId": "59e7ee37-9bf8-4ffa-fc2f-838f16825e84"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "retry...\n",
-            "retry...\n",
-            "retry...\n",
-            "retry...\n",
-            "retry...\n",
-            "retry...\n",
             "漢寧門市\n",
             "02-23121737\n",
             "漢口街一段3、5、9、11號\n",
@@ -4222,6 +4217,36 @@
     {
       "cell_type": "code",
       "source": [
+        "# pandas: 表格處理函式庫\n",
+        "import pandas as pd\n",
+        "import json\n",
+        "import urllib.request as req\n",
+        "\n",
+        "\n",
+        "url = \"https://www.cosmed.com.tw/api/getStore.aspx?t=store&c=&d=&s=\"\n",
+        "f = req.urlopen(url)\n",
+        "content = f.read()\n",
+        "content = content.decode()\n",
+        "content = json.loads(content)\n",
+        "store_list = content[\"data\"]\n",
+        "\n",
+        "#f = open(\"鬼滅之刃_danmu.csv\", \"w\", encoding=\"utf-8\")\n",
+        "#f.write(\"時間，id，彈幕\\n\")\n",
+        "\n",
+        "# 幫你把整個list轉換成pandas的表格型態(DataFrame)\n",
+        "df = pd.json_normalize(store_list)\n",
+        "# DataFrame有一個專屬功能叫做to_xxx\n",
+        "df.to_csv(\"cosmed02.csv\", encoding = \"utf-8\")"
+      ],
+      "metadata": {
+        "id": "mCIKqgfK7WnF"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import json\n",
         "import urllib.request as req\n",
         "\n",
@@ -4236,7 +4261,7 @@
         "        break\n",
         "\n",
         "# 準備儲存的檔案\n",
-        "f = open(\"cosmed.csv\", \"w\", encoding=\"utf-8\")\n",
+        "f = open(\"cosmed01.csv\", \"w\", encoding=\"utf-8\")\n",
         "f.write(\"名稱, 電話\\n\")\n",
         "content = json.loads(content)\n",
         "store_list = content[\"data\"]\n",
