--- a/HW_0106.ipynb
+++ b/HW_0106.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvq5wJvbqrkqOw+MCM9cB7",
+      "authorship_tag": "ABX9TyNi3/YJTewEDVD7ezEHcOIk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,71 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/shannonshih/Tibame_GAD245-Practice-HW_0106/blob/main/HW_0106.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# HW1\n",
+        "#stotal = 6\n",
+        "step_list = [None] * 6\n",
+        "\n",
+        "for i in range(6):\n",
+        "    if\n",
+        "    step = step + (i + 1) + (i + 2)\n",
+        "    print(step)\n",
+        "    i = i - 1\n",
+        "# print(step)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dhJwmGFfTYZO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3%2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bfa8JCOvKEcz",
+        "outputId": "a71d5127-db0f-413e-cbc2-ec2b26850216"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 前一階走到方式 prev1\n",
+        "# 前兩階走到方式 prev2\n",
+        "prev1, prev2 = 0, 0\n",
+        "total = 100\n",
+        "for i in range(total):\n",
+        "    # 主要要解決: prev1, prev2的設定\n",
+        "    pass\n",
+        "print(\"走100階總共有\", total, \"種方式\")"
+      ],
+      "metadata": {
+        "id": "cUcwuWL5G26M"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -71,7 +136,7 @@
         "id": "l_Xm4pWWvbFA",
         "outputId": "64211b89-3dff-428b-c57c-97e2974447ca"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +178,7 @@
         "id": "3VxAmpmIVGMr",
         "outputId": "e2f9e8ed-4617-496b-e7ef-ea2e750ffbf2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +244,7 @@
         "id": "httfEm0rOMUl",
         "outputId": "ff7e68fc-1572-4bf7-f17d-d50e24adc4b1"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
