--- a/HW_0106.ipynb
+++ b/HW_0106.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNi3/YJTewEDVD7ezEHcOIk",
+      "authorship_tag": "ABX9TyOJVWyd2AjQ16pHvpfUv9su",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,11 @@
       "source": [
         "# HW1\n",
         "#stotal = 6\n",
-        "step_list = [None] * 6\n",
+        "step_list = [0] * 6\n",
         "\n",
-        "for i in range(6):\n",
-        "    if\n",
+        "if len(step_list) == 6\n",
+        "    for i in range(6):\n",
+        "    step_list[i] = step_list[i] + 1\n",
         "    step = step + (i + 1) + (i + 2)\n",
         "    print(step)\n",
         "    i = i - 1\n",
@@ -50,26 +51,41 @@
     {
       "cell_type": "code",
       "source": [
-        "3%2"
+        "import numpy as np\n",
+        "a = [0]*6\n",
+        "np_a = np.array(a)\n",
+        "i = 0\n",
+        "while i < 6:\n",
+        "    new_a = np_a[i] + 1\n",
+        "    #a = a[i]+1\n",
+        "    print(new_a)\n",
+        "    i = i + 1\n",
+        "print(np.array(new_a))\n",
+        "#print(sum(i for i in a))\n",
+        "\n",
+        "#print(sum(new_a))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bfa8JCOvKEcz",
-        "outputId": "a71d5127-db0f-413e-cbc2-ec2b26850216"
+        "outputId": "93501d00-a4e6-4588-ff4e-af1c3acd8f5b"
       },
-      "execution_count": 17,
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n"
+          ]
         }
       ]
     },
