--- a/HW_繳交.ipynb
+++ b/HW_繳交.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMugtQM4Y1tqb4z8OgSJCV",
+      "authorship_tag": "ABX9TyPm1coqx9Ec8IahPjJQoyzU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!!!第一題!!!\n",
+        "\n",
+        "# 初始化變數\n",
+        "prev1, prev2 = 0, 0 # 前一階和前兩階走到的方法數\n",
+        "i = 1\n",
+        "ways = 0\n",
+        "\n",
+        "# 啟動條件\n",
+        "while i <= 100:\n",
+        "    layer = i # 總階數\n",
+        "    if layer == 1: # 第1階的方法數為 1\n",
+        "        prev1 = 1\n",
+        "        prev2 = 1\n",
+        "    else:\n",
+        "        current = prev1 + prev2 # 當前階的方法數\n",
+        "        prev2 = prev1 # 更新前兩階的方法數\n",
+        "        prev1 = current # 更新前一階的方法數\n",
+        "    ways = prev1 # 最終結果儲存在prev1中\n",
+        "    i = i + 1\n",
+        "\n",
+        "# 輸出結果\n",
+        "    print(\"走\", layer, \"階總共有\", ways, \"種方式\")"
+      ],
+      "metadata": {
+        "id": "dl8HGyfoi8Om"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "-EpSpRZbaopH"
       },
       "outputs": [],
       "source": [
+        "!!!第二題!!!\n",
+        "\n",
         "import urllib.request as req\n",
         "\n",
         "url = \"https://github.com/Elwing-Chou/tibame1224/raw/refs/heads/main/password.txt\"\n",
