--- a/HW_0106.ipynb
+++ b/HW_0106.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQ+fRlgaI3fJr/M7uuuXMu",
+      "authorship_tag": "ABX9TyNcOXKiku+fyDVDP5Rt58MA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,8 +39,7 @@
         "    step = step + (i + 1) + (i + 2)\n",
         "    print(step)\n",
         "    i = i - 1\n",
-        "# print(step)\n",
-        "\n"
+        "# print(step)"
       ],
       "metadata": {
         "id": "dhJwmGFfTYZO"
@@ -126,7 +125,7 @@
         "id": "TqsFWAeV22b6",
         "outputId": "14701dea-6d83-4da0-a3c3-a250e02e6b6e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +315,7 @@
         "id": "_pZtDqIK4WZE",
         "outputId": "8c4e2973-051f-4b8f-ade5-151d4d8094b5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +385,7 @@
       "metadata": {
         "id": "l_Xm4pWWvbFA"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +407,7 @@
         "id": "3VxAmpmIVGMr",
         "outputId": "21b3a173-f410-4d75-aa0f-7bd31141fac6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +440,7 @@
       "metadata": {
         "id": "RTfj23voH3FE"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -480,7 +479,7 @@
         },
         "outputId": "c79fa4ce-c621-49c1-cdae-768ebb227a6c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +768,7 @@
         "id": "F4dVpdtT29e4",
         "outputId": "4446e4a9-854a-4adf-c8a1-a0b25c881b5b"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -874,7 +873,7 @@
         "id": "L_zoCstd0YLQ",
         "outputId": "4623bc5b-0554-4e44-f05b-13f862c4e910"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
