--- a/HW_繳交.ipynb
+++ b/HW_繳交.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSx5td17jvyYcbxqo1glr8",
+      "authorship_tag": "ABX9TyMH/JfHc0oQ5F3DRK8ToMRz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,41 @@
       "cell_type": "code",
       "source": [
         "!!!第三題!!!\n",
-        "# 還在解題中"
+        "\n",
+        "import ColabTurtle.Turtle as turtle\n",
+        "turtle.initializeTurtle()\n",
+        "# turtle.hideturtle()\n",
+        "turtle.pensize(1)\n",
+        "turtle.speed(5)\n",
+        "\n",
+        "# 初始點\n",
+        "start = [[200, 50], [600, 50], [600, 450], [200, 450]]\n",
+        "\n",
+        "draw = int(input(\"請輸入要畫出多少個圖形: \"))\n",
+        "for d in range(draw): # 這裡可以控制要畫多少個圖形\n",
+        "    # 移動到第一點(不畫)\n",
+        "    turtle.penup()\n",
+        "    x, y = start[0]\n",
+        "    turtle.goto(x, y)\n",
+        "    turtle.pendown()\n",
+        "\n",
+        "    # 畫出圖形\n",
+        "    for i in range(len(start)):\n",
+        "        # 1->2->3->1\n",
+        "        x, y = start[(i + 1) % len(start)]\n",
+        "        turtle.goto(x, y)\n",
+        "\n",
+        "    # 計算每條邊的中點\n",
+        "    new_start = []\n",
+        "    for i in range(len(start)):\n",
+        "        x1, y1 = start[i]\n",
+        "        x2, y2 = start[(i + 1) % len(start)]\n",
+        "        new_x = (x1 + x2) / 2\n",
+        "        new_y = (y1 + y2) / 2\n",
+        "        new_start.append([new_x, new_y])\n",
+        "\n",
+        "    # 更新起始點為上一個圖形邊長的一半\n",
+        "    start = new_start"
       ],
       "metadata": {
         "id": "QzD9AKzsj7Ig"
